@@ -5,7 +5,8 @@ Changelog
 1.0.0a2 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- Implement `delete`.
+  [mathias.leimgruber]
 
 
 1.0.0a1 (2016-09-02)
